[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "alarm-clock"
version     = "1.0.0"
description = "A Python CLI alarm clock with named, recurring alarms."
readme      = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "playsound3>=1.0.0",
]

[project.scripts]
# After `pip install -e .`, the `alarm` command is available in the shell.
alarm = "alarm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["alarm*"]
